--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="h1">40sp</dimen>
+    <dimen name="icon">120dp</dimen>
+    <dimen name="image">200dp</dimen>
 
 
 </resources>
